[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phase-platform-auth"
version = "0.1.0"
description = "Reference implementation of the PHASE Platform §2.6.1 Auth0 JWT validation contract"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Ken Williford" },
]
keywords = ["auth0", "jwt", "oidc", "phase-platform"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "pyjwt[crypto]>=2.8,<3",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-httpx>=0.30",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/kenwilliford/phase-platform-auth"
Source = "https://github.com/kenwilliford/phase-platform-auth"
Issues = "https://github.com/kenwilliford/phase-platform-auth/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/phase_platform_auth"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
